lib/src/compiler/tests/testdata/errors/85.out
error[E010]: invalid pattern `$a`
 --> line:3:16
  |
3 |   $a = { 01 02 0 }
  |                ^ uneven number of nibbles
  |